negrok integrado